Resolves: tdf#119790 for gtk3 save and restore typed name on changing filter

Change-Id: I17c3d154144b13ce401b0e4afe84c91a2fe98d8e
Reviewed-on: https://gerrit.libreoffice.org/63075
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>